--- a/index.html
+++ b/index.html
@@ -23,16 +23,8 @@
       <button type="button" class="profile__add-button" aria-label="Добавить"></button>
     </section>
     <section class="elements">
-      <template id="element">
-        <article class="element">
-          <img class="element__image" alt="Место">
-          <button type="button" class="element__delete" aria-label="Удалить"></button>
-          <div class="element__place">
-            <p class="element__point"></p>
-            <button type="button" class="element__like" aria-label="Нравится"></button>
-          </div>
-        </article>
-      </template>
+      <ul class="element__list">
+      </ul>
     </section>
   </main>
   <footer class="footer">
@@ -41,8 +33,8 @@
   <div class="popup">
     <form class="popup__container" name="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
-      <input type="text" class="popup__text popup__text_name" name="popup__text_name">
-      <input type="text" class="popup__text popup__text_job" name="popup__text_job">
+      <input type="text" class="popup__text popup__text_name" name="popup__text_name" required>
+      <input type="text" class="popup__text popup__text_job" name="popup__text_job" required>
       <button type="button" class="popup__close" aria-label="Закрыть Окно"></button>
       <button type="submit" class="popup__save" aria-label="Сохранить">Сохранить</button>
     </form>
@@ -50,8 +42,8 @@
   <div class="popup popup_place">
     <form class="popup__container popup__container_place" name="popup-place__container">
       <h2 class="popup__title">Новое место</h2>
-      <input type="text" class="popup__text popup__text_place-name" name="popup__text_place-name" placeholder="Название">
-      <input type="text" class="popup__text popup__text_place-link" name="popup__text_place-link" placeholder="Ссылка на картинку">
+      <input type="text" class="popup__text popup__text_place-name" name="popup__text_place-name" placeholder="Название" required>
+      <input type="url" class="popup__text popup__text_place-link" name="popup__text_place-link" placeholder="Ссылка на картинку" required>
       <button type="button" class="popup__close popup__close_place" aria-label="Закрыть Окно"></button>
       <button type="submit" class="popup__save popup__save_place" aria-label="Создать">Создать</button>
     </form>
@@ -63,6 +55,18 @@
       <p class="popup__image-name"></p>
     </figure>
   </div>
+  <template id="element">
+      <li class="element">
+        <article>
+          <img class="element__image" alt="Место">
+          <button type="button" class="element__delete" aria-label="Удалить"></button>
+          <div class="element__place">
+            <p class="element__point"></p>
+            <button type="button" class="element__like" aria-label="Нравится"></button>
+          </div>
+        </article>
+      </li>
+  </template>
   <script src="./scripts/main.js"></script>
 </body>
 </html>
