--- a/index.html
+++ b/index.html
@@ -31,21 +31,25 @@
     <p class="footer__copyright">&copy; 2020.  Mesto Russia</p>
   </footer>
   <div class="popup">
-    <form class="popup__container" name="popup__container">
+    <form class="popup__container" name="popup__container" novalidate>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <input type="text" class="popup__text popup__text_name" name="popup__text_name" required>
-      <input type="text" class="popup__text popup__text_job" name="popup__text_job" required>
+      <input id="profile-name" type="text" class="popup__text popup__text_name" name="popup__text_name" required minlength="2" maxlength="40">
+      <span id="profile-name-error" class='popup__error'></span>
+      <input id="profile-job" type="text" class="popup__text popup__text_job" name="popup__text_job" required minlength="2" maxlength="200">
+      <span id="profile-job-error" class='popup__error'></span>
       <button type="button" class="popup__close" aria-label="Закрыть Окно"></button>
-      <button type="submit" class="popup__save" aria-label="Сохранить">Сохранить</button>
+      <button type="submit" class="popup__save" aria-label="Сохранить" disabled>Сохранить</button>
     </form>
   </div>
   <div class="popup popup_place">
-    <form class="popup__container popup__container_place" name="popup-place__container">
+    <form class="popup__container popup__container_place" name="popup-place__container" novalidate>
       <h2 class="popup__title">Новое место</h2>
-      <input type="text" class="popup__text popup__text_place-name" name="popup__text_place-name" placeholder="Название" required>
-      <input type="url" class="popup__text popup__text_place-link" name="popup__text_place-link" placeholder="Ссылка на картинку" required>
+      <input id="place-name" type="text" class="popup__text popup__text_place-name" name="popup__text_place-name" placeholder="Название" required minlength="1" maxlength="30">
+      <span id="place-name-error" class='popup__error'></span>
+      <input id="place-link" type="url" class="popup__text popup__text_place-link" name="popup__text_place-link" placeholder="Ссылка на картинку" required>
+      <span id="place-link-error"class='popup__error'></span>
       <button type="button" class="popup__close popup__close_place" aria-label="Закрыть Окно"></button>
-      <button type="submit" class="popup__save popup__save_place" aria-label="Создать">Создать</button>
+      <button type="submit" class="popup__save popup__save_place" aria-label="Создать" disabled>Создать</button>
     </form>
   </div>
   <div class="popup popup_image">
@@ -68,5 +72,6 @@
       </li>
   </template>
   <script src="./scripts/main.js"></script>
+  <script src="./scripts/validate.js"></script>
 </body>
 </html>
