--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <input id="profile-job" type="text" class="popup__text popup__text_job" name="popup__text_job" required minlength="2" maxlength="200">
       <span id="profile-job-error" class='popup__error'></span>
       <button type="button" class="popup__close" aria-label="Закрыть Окно"></button>
-      <button type="submit" class="popup__save" aria-label="Сохранить" disabled>Сохранить</button>
+      <button type="submit" class="popup__save" aria-label="Сохранить">Сохранить</button>
     </form>
   </div>
   <div class="popup popup_place">
@@ -47,9 +47,9 @@
       <input id="place-name" type="text" class="popup__text popup__text_place-name" name="popup__text_place-name" placeholder="Название" required minlength="1" maxlength="30">
       <span id="place-name-error" class='popup__error'></span>
       <input id="place-link" type="url" class="popup__text popup__text_place-link" name="popup__text_place-link" placeholder="Ссылка на картинку" required>
-      <span id="place-link-error"class='popup__error'></span>
+      <span id="place-link-error" class='popup__error'></span>
       <button type="button" class="popup__close popup__close_place" aria-label="Закрыть Окно"></button>
-      <button type="submit" class="popup__save popup__save_place" aria-label="Создать" disabled>Создать</button>
+      <button type="submit" class="popup__save popup__save_place" aria-label="Создать">Создать</button>
     </form>
   </div>
   <div class="popup popup_image">
