--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         </article>
       </li>
   </template>
-  <script src="./scripts/main.js"></script>
+
+  <script type="module" src="./scripts/main.js"></script>
   <script src="./scripts/validate.js"></script>
+
 </body>
 </html>
