--- a/index.html
+++ b/index.html
@@ -71,9 +71,6 @@
         </article>
       </li>
   </template>
-
-  <script type="module" src="./scripts/main.js"></script>
-  <script src="./scripts/validate.js"></script>
-
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
