--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <footer class="footer">
     <p class="footer__copyright">&copy; 2020.  Mesto Russia</p>
   </footer>
-  <div class="popup">
+  <div class="popup popup_profile">
     <form class="popup__container popup__container_profile" name="popup__container" novalidate>
       <h2 class="popup__title">Редактировать профиль</h2>
       <input id="profile-name" type="text" class="popup__text popup__text_name" name="popup__text_name" required minlength="2" maxlength="40">
