--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./pages/index.css" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Место. Россия</title>
 </head>
@@ -33,9 +32,9 @@
   <div class="popup popup_profile">
     <form class="popup__container popup__container_profile" name="popup__container" novalidate>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <input id="profile-name" type="text" class="popup__text popup__text_name" name="popup__text_name" required minlength="2" maxlength="40">
+      <input id="profile-name" type="text" class="popup__text popup__text_name" name="name" required minlength="2" maxlength="40">
       <span id="profile-name-error" class='popup__error'></span>
-      <input id="profile-job" type="text" class="popup__text popup__text_job" name="popup__text_job" required minlength="2" maxlength="200">
+      <input id="profile-job" type="text" class="popup__text popup__text_job" name="info" required minlength="2" maxlength="200">
       <span id="profile-job-error" class='popup__error'></span>
       <button type="button" class="popup__close" aria-label="Закрыть Окно"></button>
       <button type="submit" class="popup__save" aria-label="Сохранить">Сохранить</button>
@@ -44,9 +43,9 @@
   <div class="popup popup_place">
     <form class="popup__container popup__container_place" name="popup-place__container" novalidate>
       <h2 class="popup__title">Новое место</h2>
-      <input id="place-name" type="text" class="popup__text popup__text_place-name" name="popup__text_place-name" placeholder="Название" required minlength="1" maxlength="30">
+      <input id="place-name" type="text" class="popup__text popup__text_place-name" name="place" placeholder="Название" required minlength="1" maxlength="30">
       <span id="place-name-error" class='popup__error'></span>
-      <input id="place-link" type="url" class="popup__text popup__text_place-link" name="popup__text_place-link" placeholder="Ссылка на картинку" required>
+      <input id="place-link" type="url" class="popup__text popup__text_place-link" name="link" placeholder="Ссылка на картинку" required>
       <span id="place-link-error" class='popup__error'></span>
       <button type="button" class="popup__close popup__close_place" aria-label="Закрыть Окно"></button>
       <button type="submit" class="popup__save popup__save_place" aria-label="Создать">Создать</button>
@@ -71,6 +70,6 @@
       </article>
     </li>
   </template>
-  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="/pages/index.js"></script>
 </body>
 </html>
