--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,13 @@
   <main>
     <section class="profile">
       <div class="profile__data">
-        <img class="profile__avatar" src="./images/profile-image.jpg" alt="Жак-Ив Кусто">
+        <div class="profile__ava-block">
+        <img class="profile__avatar" src="./images/profile-image.jpg" alt="">
+        <button type="button" class="profile__avatar-edit" aria-label="Редактировать"></button>
+        </div>
         <div class="profile__text">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <p class="profile__job">Исследователь океана</p>
+          <h1 class="profile__name">Слава Зайцев</h1>
+          <p class="profile__job">Прокрастинатор</p>
         </div>
         <button type="button" class="profile__edit-button" aria-label="Редактировать"></button>
       </div>
@@ -34,7 +37,7 @@
       <h2 class="popup__title">Редактировать профиль</h2>
       <input id="profile-name" type="text" class="popup__text popup__text_name" name="name" required minlength="2" maxlength="40">
       <span id="profile-name-error" class='popup__error'></span>
-      <input id="profile-job" type="text" class="popup__text popup__text_job" name="info" required minlength="2" maxlength="200">
+      <input id="profile-job" type="text" class="popup__text popup__text_job" name="about" required minlength="2" maxlength="200">
       <span id="profile-job-error" class='popup__error'></span>
       <button type="button" class="popup__close" aria-label="Закрыть Окно"></button>
       <button type="submit" class="popup__save" aria-label="Сохранить">Сохранить</button>
@@ -43,7 +46,7 @@
   <div class="popup popup_place">
     <form class="popup__container popup__container_place" name="popup-place__container" novalidate>
       <h2 class="popup__title">Новое место</h2>
-      <input id="place-name" type="text" class="popup__text popup__text_place-name" name="place" placeholder="Название" required minlength="1" maxlength="30">
+      <input id="place-name" type="text" class="popup__text popup__text_place-name" name="name" placeholder="Название" required minlength="1" maxlength="30">
       <span id="place-name-error" class='popup__error'></span>
       <input id="place-link" type="url" class="popup__text popup__text_place-link" name="link" placeholder="Ссылка на картинку" required>
       <span id="place-link-error" class='popup__error'></span>
@@ -58,6 +61,21 @@
       <p class="popup__image-name"></p>
     </figure>
   </div>
+  <div class="popup popup_confirm">
+    <form class="popup__container popup__container_confirm" name="confirm" novalidate>
+      <h2 class="popup__title">Вы уверены?</h2>
+      <button type="button" class="popup__close popup__close_confirm" aria-label="Закрыть Окно"></button>
+      <button type="click" class="popup__confirmbtn" aria-label="Да">Да</button>
+    </form>
+  </div>
+  <div class="popup popup_avatar">
+    <form class="popup__container popup__container_avatar" name="avatar" novalidate>
+      <h2 class="popup__title">Обновить аватар</h2>
+      <input id="avatar" type="url" class="popup__text popup__text_avatar" name="avatar" placeholder="Ссылка на аватар" required>
+      <button type="button" class="popup__close popup__close_avatar" aria-label="Закрыть Окно"></button>
+      <button type="click" class="popup__refresh-ava-btn" aria-label="Сохранить">Сохранить</button>
+    </form>
+  </div>
   <template id="element">
     <li class="element">
       <article>
@@ -65,7 +83,10 @@
         <button type="button" class="element__delete" aria-label="Удалить"></button>
         <div class="element__place">
           <p id="point" class="element__point"></p>
-          <button type="button" class="element__like" aria-label="Нравится"></button>
+          <div class="element__likeblock">
+            <button type="button" class="element__like" aria-label="Нравится"></button>
+            <p class="element__likecount">1</p>
+          </div>
         </div>
       </article>
     </li>
