--- a/src/index.html
+++ b/src/index.html
@@ -72,9 +72,10 @@
   <div class="popup popup_avatar">
     <form class="popup__container popup__container_avatar" name="avatar" novalidate>
       <h2 class="popup__title">Обновить аватар</h2>
-      <input id="avatar" type="url" class="popup__text popup__text_avatar" name="avatar" placeholder="Ссылка на аватар">
+      <input id="avatar" type="url" class="popup__text popup__text_avatar" name="avatar" placeholder="Ссылка на аватар" required>
+      <span id="avatar-error" class='popup__error'></span>
       <button type="button" class="popup__close popup__close_avatar" aria-label="Закрыть Окно"></button>
-      <button type="button" class="popup__refresh-ava-btn" aria-label="Сохранить">Сохранить</button>
+      <button type="submit" class="popup__save popup__refresh-ava-btn" aria-label="Сохранить">Сохранить</button>
     </form>
   </div>
   <template id="element">
